Fix overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,5 +53,6 @@ h1,h2 {
             border-collapse:collapse;
         }
         .block table td {
-            padding:2px 20px 2px 20px;
+            padding:2px 10px 2px 10px;
+            vertical-align:middle;
         }
